--- a/contactbook-frontend/package.json
+++ b/contactbook-frontend/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "bootstrap": "^4.6.2",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
